--- a/vk-spring-security-jpa/src/main/resources/application.properties
+++ b/vk-spring-security-jpa/src/main/resources/application.properties
@@ -5,8 +5,13 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/vk-spring-security-jpa?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/springsecurity
 
 # Username and password
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.username = test
+spring.datasource.password = test
+
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
